# TechProductParser

./: pyproject.toml
RequestsBased/: Citilink.py  base.py
SeleniumBased/: base.py
