[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["fidanze <fidanze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.9"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
